Fixed mobile frame overlap on ad previews

--- a/src/style/MyAdCampaignsPage.less
+++ b/src/style/MyAdCampaignsPage.less
@@ -8,9 +8,9 @@
     }
 
     .tv-ad-player {
-        top: 7%;
-        left: 5%;
-        width: 88%;
+        top: 11%;
+        left: 8%;
+        width: 81%;
         z-index: 1;
     }
 
